# mini-ossp

./: index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.ts
src/: App.sass  App.tsx  OAuth.ts  SpotifyController.ts  TokenManager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Components/: Controls.module.sass  Controls.sass  Controls.tsx
