[package]
name = "mini-spotify"
version = "0.0.0"
description = "A Tauri App"
authors = ["carne8"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
librespot = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
sha1 = "0.10.5"
hex = "0.4.3"
tokio = "1.27.0"
futures-core = "0.3.28"
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
